--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,6 +34,7 @@
     "@angular/router": "^20.3.0",
     "@primeuix/themes": "^2.0.3",
     "@tailwindcss/postcss": "^4.2.0",
+    "chart.js": "^4.5.1",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
     "primeng": "^20.4.0",
